<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edite_entreprise">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp"/>
    <EditText
        android:id="@+id/e1Edit"
        style="@style/EditTxtStyl"
        android:layout_below="@+id/sp"
        android:hint="@string/hint1" />
    <EditText
        style="@style/EditTxtStyl"
        android:hint="@string/hint2"
        android:layout_below="@+id/e1Edit"
        android:id="@+id/e2Edit"/>
    <EditText
        style="@style/EditTxtStyl"
        android:hint="@string/hint3"
        android:layout_below="@+id/e2Edit"
        android:id="@+id/e3Edit"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e3Edit">
        <Button
            style="@style/ActivitysButn"
            android:id="@+id/b1Edit"
            android:layout_weight="1"
            android:text="@string/b1Edt"
            android:onClick="modifier"/>
        <Button
            style="@style/ActivitysButn"
            android:id="@+id/b2Edit"
            android:layout_weight="1"
            android:text="@string/b2Edt"
            android:onClick="supprimer"/>
    </LinearLayout>

</RelativeLayout>